# media-sorter

./: .gitignore  .graphifyignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  renovate.json
.github/workflows/: ci.yml  release.yml  semantic-release.yml
.mex/: AGENTS.md  ROUTER.md  SETUP.md  config.json
.mex/context/: ai.md  architecture.md  conventions.md  decisions.md  setup.md  stack.md
.mex/events/: decisions.jsonl
.mex/patterns/: INDEX.md  add-endpoint.md  add-service.md  ai-integration.md  debug-backend.md
.playwright-mcp/: page-2026-06-08T11-27-59-961Z.yml  page-2026-06-08T11-28-28-042Z.yml  page-2026-06-08T11-28-44-361Z.yml  page-2026-06-08T11-30-29-301Z.yml  page-2026-06-08T11-30-33-934Z.yml  page-2026-06-08T11-30-49-756Z.yml  page-2026-06-08T11-31-06-786Z.yml  page-2026-06-08T11-34-18-170Z.yml  page-2026-06-08T11-35-47-184Z.yml  page-2026-06-08T11-36-00-984Z.yml  page-2026-06-08T11-36-17-739Z.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: _version.py  main.py
backend/app/api/: deps.py  schemas.py
backend/app/api/routes/: ai.py  config.py  health.py  logs.py  media.py  reports.py  scan.py  sorting.py  update.py
backend/app/background_tasks/: task_manager.py
backend/app/core/: bootstrap.py  config.py  config_sections.py  database.py  exceptions.py  log_queue.py  logging_config.py  serializers.py
backend/app/services/: analysis_service.py  config_service.py  conversion_service.py  dedup_index.py  destination.py  duplicate_service.py  extraction_service.py  filesystem_service.py  junk_filter.py  metadata_service.py  preview_service.py  repair_service.py  report_service.py  rule_engine_service.py  sorting_service.py  update_service.py
backend/app/services/ai/: ai_tagging_service.py  base_tagger.py  category_classifier_service.py  category_suggestion_service.py  clip_embedder.py  encoder_factory.py  encoder_protocol.py  hardware.py  prompts.py  siglip_encoder.py
backend/app/utils/: __init__.py  ffmpeg_utils.py  media_utils.py  path_utils.py
backend/tests/: conftest.py  test_cli_transport.py  test_config.py  test_database.py  test_extraction.py  test_health.py  test_serializers.py  test_workflows.py
backend/tests/test_api/: test_ai_api.py  test_analysis_api.py  test_config_api.py  test_logs_api.py  test_media_api.py  test_preview_api.py  test_reports_api.py  test_sorting_api.py  test_task_contract_api.py
backend/tests/test_e2e/: test_sorting_workflow.py
backend/tests/test_services/: test_ai_prompts.py  test_ai_tagging_service.py  test_analysis_service.py  test_category_classifier_service.py  test_category_suggestion_service.py  test_conversion_service.py  test_coverage_supplement.py  test_dedup_index.py  test_destination.py  test_directory_validation.py  test_duplicate_service.py  test_extraction_service.py  test_filesystem_service.py  test_hardware.py  test_heic_raw_handling.py  test_junk_filter.py  test_logging_config.py  test_metadata_service.py  test_preview_service.py  test_repair_service.py  test_report_service.py  test_rule_engine_service.py  test_siglip_encoder.py  test_sorting_p0_engine.py  test_sorting_service.py  test_task_manager.py  test_traversal_reliability.py  test_update_service.py
backend/tests/test_utils/: test_ffmpeg_utils.py  test_media_utils.py  test_path_utils.py
cli/: __init__.py  main.py
cli/utils/: __init__.py  api_client.py  formatters.py
docs/: design.md  development.md  kb-api-contract.md  kb-backend.md  kb-deprecated.md  kb-testing.md  settings-reference.md
docs/assets/: README.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: AnalysisPanel.tsx  ConfigPanel.tsx  ConfirmDialog.tsx  DuplicateComparison.tsx  (+13 more)
scripts/: fetch_clip_model.py  fetch_ffmpeg.py  fetch_siglip_model.py  generate_icons.py  make_portable_zip.py  sync-version.mjs
(+80 files in other folders)
